# cometbt

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  basicShader.fs  basicShader.vs  main  main.cpp  shaders.shader
New Unity Project/ProjectSettings/: ProjectSettings.asset
include/: bencode.h  bitfield.h  block.h  buffer.h  display.h  event_loop.h  http_parser.h  info_hash.h  log.h  mesh.h  peer_connection.h  peer_connection_core.h  peer_info.h  piece.h  piece_manager.h  recv_buffer.h  serial.h  session.h  shader.h  socketSSL.h  tcp.h  timer.h  torrent.h
src/: bencode.cpp  bitfield.cpp  block.cpp  buffer.cpp  display.cpp  event_loop.cpp  http_parser.cpp  info_hash.cpp  mesh.cpp  peer_connection.cpp  peer_connection_core.cpp  piece.cpp  piece_manager.cpp  recv_buffer.cpp  serial.cpp  session.cpp  shader.cpp  socketSSL.cpp  tcp.cpp  timer.cpp  torrent.cpp
tests/: CMakeLists.txt  test_bencode_decoder.cpp  test_buffer.cpp  test_hash.cpp  test_piece.cpp  test_recv_buffer.cpp
